fixed chosen shows section padding on mobile

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -79,12 +79,18 @@ nav {
     text-align: center;
     padding: 20px;
   }
+  .chosen-shows {
+    padding-top: 30px;
+  }
 }
 
 @media (min-width: 1200px) {
   .icon-div {
     text-align: center;
     margin-top: -100px;
+  }
+  .chosen-shows {
+    padding-top: 80px;
   }
 }
 
